2004-11-09  Martin Baulig  <martin@ximian.com>

	* gen-86.cs, gen-87.cs, gen-88.cs, gen-89.cs, gen-90.cs,
	gen-91.cs, gen-92.cs, gen-93.cs, gen-94.cs, gen-96.cs: New tests.

2004-11-09  Martin Baulig  <martin@ximian.com>

	* test-315.cs: New test.

2004-11-04  Raja R Harinath  <rharinath@novell.com>

	* harness.mk: Avoid creating and deleting symlinks.

2004-11-03  Carlos Alberto Cortez <carlos@unixmexico.org>

	* acc-modifiers.cs: New test for accessor modifiers
	* acc-modifiers2.cs: New test for accessor modifiers

2004-10-31  Marek Safar <marek.safar@seznam.cz>

	* test-311.cs: New test for security attrbiutes.

2004-10-24  Marek Safar <marek.safar@seznam.cz>

	* test-310.cs: New test for bug #67130

2004-10-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (test-harness, test-harness-run): Rename from
	test-compiler-jit-real, and move body to harness.mk.
	Update to use 'make' to loop over testcases, so that they can be
	run in parallel.
	(run-test-local): Update.
	(test-generics-2): Likewise.
	* harness.mk: New file.  Contains the actual harness, and also
	lists dependencies in multi-file testcases.

2004-10-13  Raja R Harinath  <rharinath@novell.com>

	* test-309.cs: Testcase from #65816.
	* Makefile (NEW_TEST_SOURCES_common): Add test-309.
	Moved test-259 here, since it requires a merge to gmcs.

2004-10-11  Martin Baulig  <martin@ximian.com>

	* Makefile (test-generics, test-generics-2): New targets.
	(new_TEST_SOURCES_common): Disabled test-308.cs.
	(TEST_SOURCES_net_2_0): Enable gen-79.cs.

2004-10-07  Raja R Harinath  <rharinath@novell.com>

	* Makefile (TEST_TAG): Rename back to 'mcs' and 'gmcs' to keep in
	sync with errors/Makefile.
	Reported by K Sathyasudha <ksathyasudha@novell.com>.

	Testcases for type-resolution.
	* test-300.cs: Add tests for local declarations and 'foreach'.
	* test-301.cs: New testcase: several 'unsafe' related keywords.
	* test-302.cs: New testcase: 'catch' clause parameters.
	* test-303.cs: New testcase: 'using' keyword.